@@ -20,6 +20,7 @@
 	mysql drop-in library runs "show processlist" for mysql_list_processes
 	mysql drop-in library supports date/time/datetime binds now instead of
 		just treating them all as datetimes
+	mysql drop-in library supports negative times now
 
 0.66.0 - fixed mysql set isolation level query
 	updated mysql connection to run commit/rollback at the end of every
